Interface e service Transacoes